Fixing element alignment

--- a/styles/form.css
+++ b/styles/form.css
@@ -18,13 +18,18 @@ body {
     align-items: center;
 }
 
+.instructions-container {
+    width: 98%;
+    max-width: 600px; /* Adjust this value to match the maximum width of the instructions */
+    margin: 0 auto; /* Center the container horizontally */
+    text-align: center; /* Center the text horizontally */
+}
+
 .instructions {
+    padding-left: 10px;
+    padding-right: 10px;
     font-family: Courier, monospace;
-    margin-bottom: 20px;
-    text-align: left;
-    width: 80%; /* Adjust this value to match the width of the form */
-    max-width: 600px; /* Adjust this value to match the maximum width of the form */
-    margin: 0 auto; /* Center the instructions horizontally */
+    text-align: justify;
 }
 
 #emailPlaceholder:hover {
@@ -32,10 +37,13 @@ body {
    color: orange;
 }
 
-form {
-    width: 80%;
+.form-container {
     max-width: 600px;
-    margin: 20px; /* Add margin around the form */
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+form {
     padding: 20px;
     border-radius: 10px;
     background-color: #333; /* Darker background color */
@@ -44,14 +52,15 @@ form {
 
 label {
     display: block;
-    margin-bottom: 5px;
+    margin-bottom: 0px;
     font-weight: bold;
 }
 input[type="text"],
 input[type="email"],
 textarea {
     width: 100%;
-    margin-bottom: 10px;
+    margin-top: 0px;
+    margin-bottom: 30px;
     padding: 8px;
     box-sizing: border-box;
     border: 1px solid #555; /* Darker border color */
